--- a/frontend/my-cars/src/components/SideMenu/SideMenu.scss
+++ b/frontend/my-cars/src/components/SideMenu/SideMenu.scss
@@ -2,9 +2,11 @@
     display: flex;
     height: 100vh;
     
-    // .my-cars-navigation-side {
+    .MuiDrawer-docked {
+        width: 226.5px;
+
         .MuiDrawer-paperAnchorLeft {
-            position: relative;
+            // position: relative;
             background-color: darkgray;
     
             .list-item {
@@ -20,6 +22,11 @@
                 }
             }
         }
-    
-    // }
+    }
+
+    .my-cars-content {
+        width: calc(100% - 250px);
+        padding: 20px;
+        margin: 0 auto;
+    }
 }
