--- a/frontend/my-cars/src/components/CarCard/CarCard.scss
+++ b/frontend/my-cars/src/components/CarCard/CarCard.scss
@@ -1,5 +1,6 @@
 .car-info-card {
     border: 1px solid aqua;
+    cursor: pointer;
 
     .car-info-container {
         display: flex;
@@ -47,7 +48,24 @@
                 text-align: center;
             }
 
-            p {
+            // p {
+            //     overflow: hidden;
+            //     text-overflow: ellipsis;
+            //     display: -webkit-box;
+            //     -webkit-line-clamp: 4;
+            //     -webkit-box-orient: vertical;
+            // }
+
+            pre {
+                // font-family: 'Roboto', sans-serif;
+                // color: #7E7E7E;
+                // font-size: 16px;
+                white-space: pre-wrap;
+                white-space: -moz-pre-wrap;
+                white-space: -pre-wrap;
+                white-space: -o-pre-wrap;
+                word-wrap: break-word;
+
                 overflow: hidden;
                 text-overflow: ellipsis;
                 display: -webkit-box;
