--- a/frontend/my-cars/src/components/SellCar/SellCar.scss
+++ b/frontend/my-cars/src/components/SellCar/SellCar.scss
@@ -1,4 +1,4 @@
-.sell-car-page-wrapper {
+.sell-car-form-wrapper {
     .sell-car-form {
         .MuiTextField-root {
             margin: 0;            
