--- a/frontend/my-cars/src/components/CarDetails/CarDetails.scss
+++ b/frontend/my-cars/src/components/CarDetails/CarDetails.scss
@@ -51,7 +51,9 @@
             }
 
             .buttons-container {
-                width: fit-content;
+                display: flex;
+                justify-content: space-between;
+                width: 170px;
                 margin-left: auto;
             }
         }
